--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ body {
     gap: 20px;
     background-color: #2E424D;
     color: #98DAD9;
-    height: 100vh;
+    height: 100%;
+    border-radius: 0 30px 30px 0;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
 }
@@ -163,14 +164,126 @@ li {
     color: #EAEBED;
     border-radius: 30px;
     margin-top: 6px;
+    position: relative;
 }
+.projects-heading {
+    position: absolute;
+    top: 1%;
+    left: 3%;
+    color: #EAEBED;
+}
+/* projects boxs */
 .projects{
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
+    gap: 25px;
+    margin: 4rem 2rem;
 }
+.project-item {
+    background-color: #EAEBED;
+    color: black;
+    border-radius: 17px;
+    padding: 0 10px 0px 20px;
+    border-left: 9px solid #2E424D;
+}
+.project-item h4 {
+    margin-bottom: 0;
+}
+.project-item p {
+    margin-top: 0;
+    padding-right: 100px;
+    font-size: 0.9rem;
+    color: #5b8291;
+}
+.project-item-icons{
+    display: flex;
+    justify-content: flex-end;
+    gap: 15px;
+    margin-right: 1.3rem;
+}
+.project-item-icons a:hover {
+    transform: translateY(-3px);
+    filter: invert(50%) sepia(21%) saturate(535%) hue-rotate(151deg) brightness(92%) contrast(93%);
+}
+.project-item-icons img {
+    width: 28px;
+}
+/* Announcements section */
 .announcements {
-
+    background-color: #EAEBED;
+    color: black;
+    border-radius: 17px;
+    margin: 4rem 2rem 0 0;
+    padding: 0rem 2rem 1rem 2rem;
 }
-.trending {
+.announcement-heading {
+    position: absolute;
+    top: 1%;
+    right: 13.8%;
+    color: #EAEBED;
+}
+.announcement-item h5 {
+    margin-bottom: 0;
+}
+.announcement-item p {
+    margin: 0;
+    font-size: 0.8rem;
+    color: #5b8291;
+}
 
+/* tranding section */
+.trending {
+    background-color: #EAEBED;
+    color: black;
+    border-radius: 17px;
+    margin: 4rem 2rem 4rem 0;
+    padding: 1rem 2rem 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+}
+.trending-heading {
+    position: absolute;
+    top: 51%;
+    right: 18.9%;
+    color: #EAEBED;
+}
+.trending-user {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.trending-user img {
+    width: 50px;
+}
+.trending-user h5 {
+    margin: 0;
+}
+.trending-user span {
+    font-size: 0.9rem;
+    color: #5b8291;
+}
+/*  Scrollbar CSS */
+  /* Firefox */
+* {
+scrollbar-width: auto;
+scrollbar-color: #2e424d #eaebed;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+background: #eaebed;
+}
+
+*::-webkit-scrollbar-thumb {
+background-color: #2e424d;
+border-radius: 10px;
+border: 3px solid #98dad9;
 }
